exports[`Schedule - Splash Screen renders correctly 1`] = `
<View
  style={
    Object {
      "zIndex": 2,
    }
  }>
  <View
    style={
      Object {
        "height": 300,
      }
    } />
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "height": 500,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": -200,
      }
    }>
    <Image
      source={1}
      style={
        Object {
          "transform": Array [
            Object {
              "translateY": 80,
            },
            Object {
              "scale": 0.8,
            },
          ],
          "zIndex": 2,
        }
      } />
    <View
      style={
        Object {
          "backgroundColor": "rgba(36, 31, 32, 0.8)",
          "bottom": 40,
          "height": 1200,
          "left": -10,
          "position": "absolute",
          "right": -10,
          "transform": Array [
            Object {
              "skewY": "5deg",
            },
          ],
        }
      } />
    <View
      style={
        Object {
          "backgroundColor": "rgba(36, 31, 32, 0.8)",
          "bottom": 40,
          "height": 1200,
          "left": -10,
          "position": "absolute",
          "right": -10,
          "transform": Array [
            Object {
              "skewY": "-3deg",
            },
            Object {
              "translateY": -5,
            },
          ],
        }
      } />
  </View>
</View>
`;

exports[`Schedule - Splash Screen renders correctly in animated state 1`] = `
<View
  style={
    Object {
      "zIndex": 2,
    }
  }>
  <View
    style={
      Object {
        "height": 300,
      }
    } />
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "height": 1734,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": -200,
      }
    }>
    <Image
      source={1}
      style={
        Object {
          "transform": Array [
            Object {
              "translateY": 0,
            },
            Object {
              "scale": 1,
            },
          ],
          "zIndex": 2,
        }
      } />
    <View
      style={
        Object {
          "backgroundColor": "rgba(36, 31, 32, 0.8)",
          "bottom": 40,
          "height": 1200,
          "left": -10,
          "position": "absolute",
          "right": -10,
          "transform": Array [
            Object {
              "skewY": "5deg",
            },
          ],
        }
      } />
    <View
      style={
        Object {
          "backgroundColor": "rgba(36, 31, 32, 0.8)",
          "bottom": 40,
          "height": 1200,
          "left": -10,
          "position": "absolute",
          "right": -10,
          "transform": Array [
            Object {
              "skewY": "-3deg",
            },
            Object {
              "translateY": -5,
            },
          ],
        }
      } />
  </View>
</View>
`;
